--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="C:\Users\anoel\OneDrive\Web Development\My Site\images\IMG_0301-modified.png" alt="profile-pic">
+      <img src="images\IMG_0301-modified.png" alt="profile-pic">
       <h2>Hi!</h2>
       <p class="intro"> I am learning software engineering. I am currently a claims adjuster and want to move into a career in technology.</p>
     </div>
