--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Avery.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
 
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>My Skills</h2>
       <div class="skill-row">
-        <img class="code-img" src="C:\Users\anoel\OneDrive\Web Development\My Site\images\web-development.png" alt="development">
+        <img class="code-img" src="\images\web-development.png" alt="development">
         <h3>Web Development</h3>
         <p>I can create basic websites using HTML, CSS, and JavaScript</p>
       </div>
