--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="skill-row">
-        <img class="cooking-img" src="C:\Users\anoel\OneDrive\Web Development\My Site\images\cooking.png" alt="cooking">
+        <img class="cooking-img" src="\images\cooking.png" alt="cooking">
         <h3>Cooking </h3>
         <p> I make some awesome meals, and love trying new recipes!</p>
       </div>
