--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
     <h1>I'm Avery.</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="/images/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images\IMG_0301-modified.png" alt="profile-pic">
+      <img src="/images\IMG_0301-modified.png" alt="profile-pic">
       <h2>Hi!</h2>
       <p class="intro"> I am learning software engineering. I am currently a claims adjuster and want to move into a career in technology.</p>
     </div>
