--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="/images\IMG_0301-modified.png" alt="profile-pic">
+      <img src="/images/IMG_0301-modified.png" alt="profile-pic">
       <h2>Hi!</h2>
       <p class="intro"> I am learning software engineering. I am currently a claims adjuster and want to move into a career in technology.</p>
     </div>
@@ -30,13 +30,13 @@
     <div class="skills">
       <h2>My Skills</h2>
       <div class="skill-row">
-        <img class="code-img" src="\images\web-development.png" alt="development">
+        <img class="code-img" src="/images/web-development.png" alt="development">
         <h3>Web Development</h3>
         <p>I can create basic websites using HTML, CSS, and JavaScript</p>
       </div>
 
       <div class="skill-row">
-        <img class="cooking-img" src="\images\cooking.png" alt="cooking">
+        <img class="cooking-img" src="/images/cooking.png" alt="cooking">
         <h3>Cooking </h3>
         <p> I make some awesome meals, and love trying new recipes!</p>
       </div>
